# xmlparser

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl
.github/workflows/: ci.yml  main.yml  weekly.yml
afl-fuzz/: Cargo.toml  README.md
afl-fuzz/src/: main.rs
examples/: parse.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_unescape.rs  fuzz_xml.rs
scripts/: run-tests.sh
src/: bytestream.rs  error.rs  lib.rs  stream.rs  strspan.rs  text.rs  token.rs  xml.rs  xmlchar.rs
tests/: README.md  api.rs  cdata.json  cdata.rs  comments.json  comments.rs  doctype.json  doctype.rs  document.json  document.rs  elements.json  elements.rs  pi.json  pi.rs  text.json  text.rs  token.rs  xml.rs
tests/integration/: api.rs  cdata.rs  comments.rs  condition.rs  doctype.rs  document.rs  elements.rs  main.rs  pi.rs  text.rs  token.rs
