[package]
name = "htmlparser"
version = "0.1.0"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
categories = ["parser-implementations"]
description = "Pull-based, zero-allocation HTML parser."
documentation = "https://docs.rs/htmlparser/"
keywords = ["html", "parser", "tokenizer"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jdrouet/htmlparser"
edition = "2018"

[features]
default = ["std"]
std = []
