[package]
name = "xmlparser"
version = "0.13.6"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
edition = "2018"
description = "Pull-based, zero-allocation XML parser."
documentation = "https://docs.rs/xmlparser"
readme = "README.md"
homepage = "https://github.com/RazrFalcon/xmlparser.git"
repository = "https://github.com/RazrFalcon/xmlparser.git"
license = "MIT OR Apache-2.0"
keywords = ["parser", "tokenizer", "xml"]
categories = ["parser-implementations"]

[features]
default = ["std"]
std = []
